<resources>
    <string name="app_name">Curators Scorepad</string>
    <string name="score_game">Score a new game</string>
    <string name="view_history">View game history</string>
    <string name="player1">Player 1</string>
    <string name="player2">Player 2</string>
    <string name="player3">Player 3</string>
    <string name="player4">Player 4</string>
    <string name="submit">Submit</string>
    <string name="money">Money Scoring ($4,000 = 1vp)</string>
    <string name="contract">Contract Scoring (Score Xvp per completed contract)</string>
    <string name="wing">Wings Scoring (Score Xvp per completed wing)</string>
    <string name="object">Object Scoring (1vp per object in museum)</string>
    <string name="advanced">Advanced Scoring (Follow card description)</string>
    <string name="advancedRules">Playing with an advanced rule card?</string>
    <string name="exitApplication">Wanting to leave Curators Scorepad Application?</string>
    <string name="scrapGame">Would you like to scrap this game?</string>
    <string name="exit">Score Game</string>
    <string name="clear">Clear Game History</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
</resources>